[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Characters/newton-icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Characters/logo-icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/tesla-icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/galilei-icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Characters/einstein-icon.png" type="Texture" id=5]
[ext_resource path="res://MainLevels/Characters/character-selection.gd" type="Script" id=6]

[node name="character-selection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.5
margin_top = 1.0
margin_right = -1.5
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selection-intro" type="Node" parent="."]

[node name="tesla" type="TextureButton" parent="selection-intro"]
margin_left = 273.629
margin_top = 321.058
margin_right = 337.629
margin_bottom = 614.058
texture_normal = ExtResource( 3 )

[node name="Label4" type="Label" parent="selection-intro/tesla"]
margin_left = 7.0
margin_top = 99.0
margin_right = 56.0
margin_bottom = 130.0
text = "Nikola
Tesla"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pagetitle" type="VBoxContainer" parent="selection-intro"]
margin_left = 38.0
margin_top = 16.0
margin_right = 989.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="selection-intro/pagetitle"]
margin_right = 951.0
margin_bottom = 86.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Label" type="Label" parent="selection-intro/pagetitle"]
margin_top = 90.0
margin_right = 951.0
margin_bottom = 104.0
text = "Game Character Selection"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="selection-intro"]
margin_left = 282.966
margin_top = 340.398
margin_right = 761.966
margin_bottom = 633.398
__meta__ = {
"_edit_use_anchors_": false
}

[node name="einstein" type="TextureButton" parent="selection-intro"]
margin_left = 570.402
margin_top = 351.736
margin_right = 634.402
margin_bottom = 644.735
toggle_mode = true
pressed = true
action_mode = 0
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="selection-intro/einstein"]
margin_left = 0.5
margin_top = 99.5
margin_right = 63.5
margin_bottom = 130.5
text = "Albert
Einstein"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="galilei" type="TextureButton" parent="selection-intro"]
margin_left = 278.964
margin_top = 155.665
margin_right = 342.964
margin_bottom = 448.665
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="selection-intro/galilei"]
margin_left = 4.0
margin_top = 99.0
margin_right = 67.0
margin_bottom = 130.0
text = "Galileo
Galilei"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newton" type="TextureButton" parent="selection-intro"]
margin_left = 601.0
margin_top = 148.0
margin_right = 767.0
margin_bottom = 294.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="selection-intro/newton"]
margin_left = 2.5
margin_top = 98.5
margin_right = 65.5
margin_bottom = 129.5
text = "Isaac
Newton"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="selection-intro/tesla" to="." method="_on_tesla_pressed"]
[connection signal="pressed" from="selection-intro/einstein" to="." method="_on_einstein_pressed"]
[connection signal="pressed" from="selection-intro/galilei" to="." method="_on_galilei_pressed"]
[connection signal="pressed" from="selection-intro/newton" to="." method="_on_newton_pressed"]
